| Bug #4213 | innodb table engine not notifying query cache to invalidate | ||
|---|---|---|---|
| Submitted: | 18 Jun 2004 21:53 | Modified: | 22 Jun 2004 13:02 |
| Reporter: | Matthew Lord | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S1 (Critical) |
| Version: | 4.0.x | OS: | Any (any) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[18 Jun 2004 21:53]
Matthew Lord
[18 Jun 2004 21:57]
Matthew Lord
Test data
Attachment: csc3013.dump (application/octet-stream, text), 1.16 KiB.
[20 Jun 2004 22:46]
Oleksandr Byelkin
ChangeSet 1.1886 04/06/20 23:44:21 bell@sanja.is.com.ua +3 -0 do not clear list of changed tables on one statement rollback (Bug #4213)
[22 Jun 2004 13:02]
Oleksandr Byelkin
Thank you for bug report. Patch for this bug pushed in our internal source repository and will be in next server release.
